--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="tea service.png" />
+                        <img src="tea service.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -167,7 +167,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="tea service.png" />
+                        <img src="tea service.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
